# bengear_agent

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CMakeLists.txt  PLAN.md  PLAN1.md  README.md  TODO.md  build_check.sh  config-example.json
benchmarks/: benchmark_content_block.cpp  benchmark_main.cpp  benchmark_message.cpp  benchmark_message_performance  benchmark_message_performance.cpp  eventloop_benchmark.cpp  json_benchmark.cpp  memory_pool_stress.cpp  performance_benchmark.cpp  test_memory_layout.cpp  workflow_benchmark.cpp
docs/: CODE_REVIEW.md  acp_api_guide.md  acp_content_block_optimization.md  acp_follow_up_complete.md  acp_migration_plan.md  acp_protocol_spec.md  acp_refactor_complete_report.md  acp_refactor_summary.md  acp_usage_guide.md  architecture.md  base_components.md  callbacks.md  cli.md  configuration.md  design_three_modes.md  eventloop_architecture.md  json_parser_design.md  llm-protocols.md  logging.md  mcp.md  memory.md  module_architecture.md  networking.md  performance_optimization_final.md  plan_mode.md  quickstart.md  role.md  server_development_plan.md  server_mode.md  session_compactor_update_plan.md  session_update_plan.md  skills.md  sub_agent.md  testing.md  tls_compress_abstraction.md  tools-reference.md  tools.md  web_plan_todo.md  workflow_complete_implementation.md  workflow_guide.md  (+3 more)
examples/: acp_example.cpp  agent_cli.cpp  base_components_example.cpp  config_layers.cpp  json_support.cpp  multilevel_manager.cpp  tcp_fetch.cpp  workflow_engine_example.cpp  workflow_example.cpp  workflow_weather_example.cpp
include/ben_gear/: ben_gear.hpp
include/ben_gear/acp/: acp.hpp
include/ben_gear/agent/: agent.hpp  agent_impl.hpp  callbacks.hpp  plan_manager.hpp  shared_resources.hpp  sub_agent.hpp  sub_agent_config.hpp
include/ben_gear/base/: tier_paths.hpp
include/ben_gear/cli/: args.hpp  cli_app.hpp  highlight.hpp  markdown.hpp  renderer.hpp  spinner.hpp  terminal.hpp  theme.hpp
include/ben_gear/config/: loader.hpp  settings.hpp
include/ben_gear/llm/: adapter.hpp  anthropic_client.hpp  chat.hpp  cooldown_tracker.hpp  http_helpers.hpp  message.hpp  openai_client.hpp  provider_client.hpp  provider_error.hpp  retry.hpp  run_outcome.hpp  stream.hpp  ttfb_capture.hpp  usage.hpp  usage_helpers.hpp
include/ben_gear/mcp/: mcp_client.hpp  mcp_config.hpp
include/ben_gear/memory/: compactor.hpp  context.hpp  context_pruner.hpp  episode.hpp  section_merge.hpp  store.hpp  types.hpp  updater.hpp
include/ben_gear/orchestration/: context.hpp  event.hpp  plan.hpp  plan_parser.hpp  result.hpp  serializer.hpp  store.hpp  todo.hpp  types.hpp
include/ben_gear/role/: filter.hpp  loader.hpp  types.hpp
include/ben_gear/session/: history_db.hpp  uuid.hpp
include/ben_gear/skill/: skill.hpp  zip_extract.hpp
include/ben_gear/test/: test_framework.hpp
include/ben_gear/tool/: manager.hpp  registry.hpp  types.hpp
include/ben_gear/tools/: builtin_tools.hpp  history_tools.hpp  memory_tools.hpp  skill_tools.hpp  sub_agent_tools.hpp  workflow_tools.hpp  workspace_tools.hpp
include/ben_gear/workflow/: advanced_tasks.hpp  checkpoint.hpp  dag.hpp  executor.hpp  executor_registry.hpp  human_approval.hpp  metrics.hpp  namespace.hpp  resource_manager.hpp  scheduler.hpp  security.hpp  simulator.hpp  storage.hpp  task.hpp  task_types.hpp  types.hpp  visualizer.hpp  workflow_builder.hpp  workflow_engine.hpp  workflow_resources.hpp  workflow_runner.hpp  workflow_templates.hpp
include/ben_gear/workspace/: conversation_history.hpp  history_db.hpp  history_exporter.hpp  manager.hpp  session.hpp  types.hpp  uuid.hpp
memory/: SOUL.md  USER.md
scripts/: enable_core.sh  monitor_acp_performance.sh
src/: main.cpp
src/acp/core/: content_block.cpp  message.cpp
src/agent/: agent.cpp  shared_resources.cpp  sub_agent.cpp
src/base/concurrency/: thread_pool.cpp
src/base/container/: string.cpp
src/base/json/: json.cpp  json_dom.cpp  json_parser.cpp  json_serializer.cpp  json_simd.cpp
src/base/memory/: pool.cpp
src/base/net/: connection_pool.cpp  event_loop.cpp  socket.cpp  tcp_stream.cpp  wakeup_fd.cpp
src/base/platform/: platform.cpp
src/cli/: cli_app.cpp  renderer.cpp
src/compress/: compress_engine.cpp  zlib_engine.cpp  zlib_engine.hpp
src/config/: loader.cpp
src/llm/: adapter.cpp  cooldown_tracker.cpp
src/mcp/: mcp_client.cpp
src/memory/: compactor.cpp  context.cpp  context_pruner.cpp  episode.cpp  section_merge.cpp  store.cpp  updater.cpp
src/orchestration/: plan.cpp  plan_parser.cpp  serializer.cpp  store.cpp  todo.cpp
src/session/: history_db.cpp
src/skill/: skill.cpp  zip_extract.cpp
src/tool/: manager.cpp  registry.cpp  types.cpp
src/tools/: sub_agent_tools.cpp
src/workflow/: approval_manager.cpp  executor.cpp  metrics.cpp  scheduler.cpp  task_types.cpp  visualizer.cpp  workflow_builder.cpp  workflow_engine.cpp  workflow_runner.cpp
src/workspace/: conversation_history.cpp  history_db.cpp  history_exporter.cpp  manager.cpp  session.cpp  uuid.cpp
tests/: test_acp.cpp  test_agent.cpp  test_base_utils.cpp  test_config.cpp  test_container.cpp  test_context_overflow.cpp  test_context_pruner.cpp  test_failover.cpp  test_file_lock.cpp  test_history_db.cpp  test_json.cpp  test_llm_clients.cpp  test_llm_endpoint.cpp  test_llm_retry.cpp  test_llm_stream.cpp  test_main.cpp  test_memory.cpp  test_memory_episode.cpp  test_net.cpp  test_orchestration.cpp  test_plan_mode.cpp  test_pool.cpp  test_role.cpp  test_server.cpp  test_session.cpp  test_sub_agent.cpp  test_tool.cpp  test_usage.cpp  test_util.hpp  test_workflow.cpp  test_workflow_extended.cpp  test_workspace.cpp
web/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
web/src/: App.vue  main.ts  style.css
webserver/: CMakeLists.txt
webserver/include/webserver/: core.hpp  event_loop.hpp  http.hpp  http_parser.hpp  http_response.hpp  http_server.hpp  router.hpp  thread_pool.hpp
webserver/src/: event_loop.cpp  http_parser.cpp  http_response.cpp  response_builder.cpp  router.cpp  socket.cpp  tcp_server.cpp  thread_pool.cpp
(+144 files in other folders)
